--- a/index.html
+++ b/index.html
@@ -15,6 +15,40 @@
         <div class="app__background">
             <div class="app__hero">
 
+                <!-- Cabeçalho -->
+                <header class="cabecalho">
+
+                    <div class="cabecalho__logo">
+                        <img src="./assets/img/logo-Netflix.svg" alt="logo netlfix" class="cabecalho__logo-img">
+                    </div>
+
+                    <div class="cabecalho__menu">
+                
+                        <div class="cabecalho__menu-esquerda">
+                            <ul class="cabecalho__menu-lista">
+                                <li class="cabecalho__menu-itens cabecalho__menu-esquerda-itens">Início</li>
+                                <li class="cabecalho__menu-itens cabecalho__menu-esquerda-itens">Séries</li>
+                                <li class="cabecalho__menu-itens cabecalho__menu-esquerda-itens">Filmes</li>
+                                <li class="cabecalho__menu-itens cabecalho__menu-esquerda-itens">Bombando</li>
+                                <li class="cabecalho__menu-itens cabecalho__menu-esquerda-itens">Minha lista</li>
+                            </ul>
+                        </div>
+
+                        <div class="cabecalho__menu-direita">
+                            <ul class="cabecalho__menu-lista">
+                                <li class="cabecalho__menu-itens cabecalho__menu-direita-itens"><i class="fas fa-search"></i></li>
+                                <li class="cabecalho__menu-itens cabecalho__menu-direita-itens"><i class="fas fa-bell"></i></li>
+                                <li class="cabecalho__user cabecalho__menu-direita-itens">
+                                    <img src="./assets/img/user.svg" alt="avatar usuario" class="cabecalho__user-img">
+                                    <i class="fas fa-sort-down"></i>
+                                </li>
+                            </ul>
+                        </div>
+
+                    </div>
+                    
+                </header>
+
                 <!-- Main -->
                 <main>
                     <!-- Banner -->
