dia 03 minha-lista

--- a/index.html
+++ b/index.html
@@ -67,6 +67,28 @@
                         </div>
                     </div>
                     
+                    <!-- Minha lista -->
+                    <div class="minha__lista">
+                        <p class="minha__lista-titulo">Minha lista</p>
+                        <section class="minha__lista-lista">
+                            <div class="minha__lista-item">
+                                <img src="./assets/img/boJackHorseman.svg" alt="BoJack Horseman" class="minha__lista-img">
+                            </div>
+                            <div class="minha__lista-item">
+                                <img src="./assets/img/ozark.svg" alt="Ozark" class="minha__lista-img">
+                            </div>
+                            <div class="minha__lista-item">
+                                <img src="./assets/img/aVizinhaDaMulherNaJanela.svg" alt="A vizinha da mulher na janela" class="minha__lista-img">
+                            
+                            </div>
+                            <div class="minha__lista-item">
+                                <img src="./assets/img/breakingBad.svg" alt="Breaking bad" class="minha__lista-img">
+                            </div>
+                            <div class="minha__lista-item">
+                                <img src="./assets/img/theEndOfTheFinkWorld.svg" alt="The end of the f***ink world" class="minha__lista-img">
+                            </div>
+                        </section>
+                    </div>
             </div>
         </div>
     </body>
