--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <body>
         <div class="app__background">
             <div class="app__hero">
-
+                
                 <!-- Cabeçalho -->
                 <header class="cabecalho">
 
@@ -86,6 +86,28 @@
                             </div>
                             <div class="minha__lista-item">
                                 <img src="./assets/img/theEndOfTheFinkWorld.svg" alt="The end of the f***ink world" class="minha__lista-img">
+                            </div>
+                        </section>
+                    </div>
+
+                    <!-- Em alta -->
+                    <div class="em__alta">
+                        <p class="em__alta-titulo">Em alta</p>
+                        <section class="em__alta-lista">
+                            <div class="em__alta-item -animacao">
+                                <img src="./assets/img/strangerThings.svg" alt="Stranger Things" class="em__alta-img">
+                            </div>
+                            <div class="em__alta-item -animacao">
+                                <img src="./assets/img/theUmbrellaAcademy.svg" alt="The Umbrella Academy" class="em__alta-img">
+                            </div>
+                            <div class="em__alta-item -animacao">
+                                <img src="./assets/img/peakyBlinders.svg" alt="Peaky Blinders" class="em__alta-img">
+                            </div>
+                            <div class="em__alta-item -animacao">
+                                <img src="./assets/img/arremessandoAlto.svg" alt="Arremessando Alta" class="em__alta-img">
+                            </div>
+                            <div class="em__alta-item -animacao">
+                                <img src="./assets/img/amorEgelato.svg" alt="Amor e Gelato" class="em__alta-img">
                             </div>
                         </section>
                     </div>
