--- a/index.html
+++ b/index.html
@@ -184,6 +184,49 @@
                             </section>
                         </div>
                     </div>
+                </main>
+
+                <!-- Rodape -->
+                <footer>
+                    <div class="social-links">
+                      <i class="fa-brands fa-facebook-f"></i>
+                      <i class="fa-brands fa-instagram"></i>
+                      <i class="fa-brands fa-twitter"></i>
+                      <i class="fa-brands fa-youtube"></i>
+                    </div>
+            
+                    <div class="link-conteudo">
+                      <div class="link-conteudo__info">
+                        <ul>
+                          <li>Idioma e legendas</li>
+                          <li>Imprensa</li>
+                          <li>Privacidade</li>
+                          <li>Entre em contato</li>
+                        </ul>
+                        <ul>
+                          <li>Audiodescrição</li>
+                          <li>Relações com investidores</li>
+                          <li>Avisos legais</li>
+                        </ul>
+                        <ul>
+                          <li>Centro de ajuda</li>
+                          <li>Carreiras</li>
+                          <li>Preferência de cookies</li>
+                        </ul>
+                        <ul>
+                          <li>Cartão pré-pago</li>
+                          <li>Termos de uso</li>
+                          <li>informações corporativas</li>
+                        </ul>
+                      </div>
+                      <div class="link-conteudo__servico">
+                        <button class="link-conteudo__servico-code">Código do serviço</button>
+                      </div>
+                      <div class="link-conteudo__copyright">
+                        <span>© 1997-2022 Netflix, Inc.&nbsp;&nbsp;&lrm;</span>
+                      </div>
+                    </div>
+                </footer> 
             </div>
         </div>
     </body>
